# unWISExLens_lklh

./: LCDM_unWISExLens_3x2pt+CMB2pt.covmat  LICENSE  README.md  example_LCDM_unWISExLens_3x2pt+CMB2pt.yaml  get_unWISExLens_data.sh  pyproject.toml  requirements.txt  requirements.txt.py  setup.py  test_unWISExLens_lklh.yaml
.github/workflows/: publish-to-pypi.yml
unWISExLens_lklh/: ThreeXTwoPtACT.py  ThreeXTwoPtACT.yaml  ThreeXTwoPtACTPlanck.py  ThreeXTwoPtACTPlanck.yaml  XCorrBlueACT.py  XCorrBlueACT.yaml  XCorrBlueGreenACT.py  XCorrBlueGreenACT.yaml  XCorrGreenACT.py  XCorrGreenACT.yaml  __init__.py  lensing_lklh_correction.py  lensing_norm_correction.py  lensing_norm_correction_helper.py  unWISExLensLklh.py  unWISExLensLklh.yaml  unWISExLensTheory.py  unWISExLens_lklh.py  unWISExLens_theory.py
unWISExLens_lklh/auxiliary/: auxiliary_functions.py  bias_coevolution.py
unWISExLens_lklh/config_files/: covmat_filenames_baseline.yaml  covmat_filenames_cmbmarg.yaml  data_filenames.yaml
unWISExLens_lklh/param_prior_files/: galaxy_nuisance_params_unWISExACT-DR6_blue.yaml  galaxy_nuisance_params_unWISExACT-DR6_green.yaml  galaxy_nuisance_params_unWISExPlanck-PR4_blue.yaml  galaxy_nuisance_params_unWISExPlanck-PR4_green.yaml
unWISExLens_lklh/theory_modules/: cross_dNdz_cosmo_correction.py  model_helpers_unWISExACT.py  unWISExkappa_model.py  unWISExkappa_model_freeCLEFT.py
