[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unWISExlens_lklh"
authors = [{name = "Gerrit S. Farren", email = "gsf29@cam.ac.uk"}]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: BSD License",
]
dynamic = ["version", "description"]
dependencies = ["numpy >=1", "scipy >=1", "cobaya >=3", "healpy"]

[project.urls]
Source = "https://github.com/ACTCollaboration/unWISExlens_lklh"